SimpleWebDB/Services/k8s-web-ClusterIP.yml
apiVersion: v1
kind: Service
metadata:
  name: simple-web
  namespace: lab 
  labels:
    role: frontend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http-standard
  selector:
    role: frontend
    app: web-apache-php
