SimpleWebDB/Services/k8s-web.yml
apiVersion: v1
kind: Service
metadata:
  name: simple-web
  namespace: lab 
  labels:
    role: frontend
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: http-standard
      nodePort: 30008
  selector:
    role: frontend
    app: web-apache-php
