SimpleWebDB/Services/k8s-web-virtualService.yml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: simplewebdb-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
     number: 80
     name: http
     protocol: HTTP
    hosts:
    - "simplewebdb.local"
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: simepleweb
spec:
  hosts:
  - "simplewebdb.local"
  gateways:
  - simplewebdb-gateway
  http:
  - route:
    - destination:
        host: simple-web
        port:
          number: 80
